completed Spa Day app with Thymeleaf

--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -15,7 +15,7 @@
 </div>
 <div id = "servicesMenu">
     <h2>Treaments</h2>
-    <p>The facial treaments below are recommend by our estheticians for your given skin type.</p>
+    <p>The facial treatments below are recommend by our estheticians for your given skin type.</p>
     <table>
         <th:block th:each = "facial : ${appropriateFacials}">
            <tr>
