--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -14,7 +14,7 @@
     <p th:text = "${manipedi}"></p>
 </div>
 <div id = "servicesMenu">
-    <h2>Treaments</h2>
+    <h2>Treatments</h2>
     <p>The facial treatments below are recommend by our estheticians for your given skin type.</p>
     <table>
         <th:block th:each = "facial : ${appropriateFacials}">
